--- a/ReadySetGo/Views/Shared/_Layout.cshtml
+++ b/ReadySetGo/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Flashcard" asp-action="Flashcards">Flashcards</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Flashcard" asp-action="Flashcard">Flashcards</a>
                         </li>
                     </ul>
                 </div>
